feat: test code with migrations

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = true
 TYPEORM_ENTITIES = dist/entity/**/*.js
+TYPEORM_MIGRATIONS_DIR= src/migration/
+TYPEORM_MIGRATIONS= src/migration/**/*.ts
