--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ TYPEORM_DATABASE = typeorm
 TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = true
-TYPEORM_ENTITIES = dist/entity/**/*.js
+TYPEORM_ENTITIES = src/entity/**/*.ts
 TYPEORM_MIGRATIONS_DIR= src/migration/
 TYPEORM_MIGRATIONS= src/migration/**/*.ts
