--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "express-typescript",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
-    "prestart": "npm run build",
-    "start": "node .",
+    "start": "ts-node .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migration:create": "ts-node ./node_modules/typeorm/cli.js migration:create",
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
